# ledgerlens

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/agents/: case-writer.md  scoring-engineer.md  ui-porter.md
.claude/hooks/: run-tests.sh
.claude/skills/ai-mistake/: SKILL.md
.claude/skills/new-case/: SKILL.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py  schemas.py
apps/api/app/core/: security.py
apps/api/app/db/: seed.py  session.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/models/: case.py  custom_case.py  organization.py  review.py  score.py  user.py
apps/api/app/prompts/: expert_feedback_v1.md  scoring_v1.md
apps/api/app/routes/: auth.py  cases.py  organizations.py  profile.py  reviews.py  scores.py  stripe.py
apps/api/app/services/: case_gen.py  email.py  llm.py  scoring.py
apps/api/seed/: INDEX.md
apps/api/seed/cases/: 001_marketing_variance.json  002_saas_revenue_recognition.json  003_hardware_sales_drop.json  004_payroll_accrual.json  005_inventory_writedown.json  006_lease_classification.json  007_ar_aging.json  008_capex_vs_opex.json  009_fx_revaluation.json  010_stock_based_comp.json
apps/api/tests/: test_llm.py  test_profile.py  test_routes.py  test_scoring.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/lib/: api.ts  (+4 more)
mockup/: LedgerLens.html  README.md  app.jsx  components.jsx  styles.css
mockup/screens/: case_review.jsx  dashboard.jsx  evaluation.jsx  profile.jsx  settings.jsx
(+94 files in other folders)
