[project]
name = "ledgerlens-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "jsonschema>=4.23",
    "bcrypt>=4.0",
    "PyJWT>=2.8.0",
    "stripe>=10.12.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
